network-examples/deny-all-cnp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-all"
  namespace: "hw"
spec:
  endpointSelector:
    matchLabels:
      app: hw
  egress:
  - {}
  ingress:
  - {}
