network-examples/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: hw
spec:
  podSelector: 
    matchLabels:
      app: hw
  policyTypes:
  - Ingress
  - Egress
