network-examples/deny-cluster-access.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-cluster-access"
  namespace: "hw"
spec:
  endpointSelector:
    matchLabels:
      app: hw
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: UDP
      - port: '53'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: default
        run: my-nginx
    toPorts:
    - ports:
      - port: '80'
        protocol: TCP
  - toCIDRSet:
    - cidr: 0.0.0.0/0
      except:
      - 10.0.0.0/8 # Private Network space
      - 172.20.0.0/16 # Services CIDR space in Kubernetes cluster
      - 100.64.0.0/10 # Pod CIDR space in kubernetes cluster
