network-examples/deny-egress-except-nginx.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-egress-except-nginx"
  namespace: "hw"
spec:
  endpointSelector:
    matchLabels:
      app: hw
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: UDP
      - port: '53'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: default
        run: my-nginx
    toPorts:
    - ports:
      - port: '80'
        protocol: TCP
