network-examples/deny-egress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-egress"
  namespace: "hw"
spec:
  endpointSelector:
    matchLabels:
      app: hw
  egress:
  - {}
